HelloWorld/force-app/main/default/objects/Account_Backup__c/Account_Backup__c.object-meta.xml
<CustomObject>
    <label>Account Backup</label>
    <nameField>
        <displayFormat>ABC-{000000}</displayFormat>
        <label>Account Backup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Backups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>