HelloWorld/force-app/main/default/objects/Account_Backup__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>