HelloWorld/force-app/main/default/objects/Account_Backup__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>